--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -117,7 +117,7 @@
     "HeaderSelectSubtitles": "W\u00f6hle Untertitel",
     "ButtonMarkForRemoval": "Entferne von Ger\u00e4t",
     "ButtonUnmarkForRemoval": "Abbrechen von Entfernen von Ger\u00e4t",
-    "LabelSyncQualityHelp": "Verwenden Sie \"hohe Qualit\u00e4t\" um die maximale vom Ger\u00e4t unterst\u00fctze Qualit\u00e4t zu verwenden. Mittlere und niedrige Qualit\u00e4t wird die erlaubte Datenrate reduzieren. Original wird die original Datei synchronisieren, egal ob diese vom Ger\u00e4t abgespielt werden kann oder nicht.",
+    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Erzwungen)",
     "LabelDefaultForcedStream": "(Standard\/Erzwungen)",
@@ -577,6 +577,7 @@
     "ValuePremieres": "Premieren {0}",
     "ValueStudio": "Studio: {0}",
     "ValueStudios": "Studios: {0}",
+    "ValueStatus": "Status: {0}",
     "ValueSpecialEpisodeName": "Special - {0}",
     "LabelLimit": "Limit:",
     "ValueLinks": "Links {0}",
@@ -713,7 +714,7 @@
     "ButtonSync": "Synchronisieren",
     "SyncMedia": "Synchronisiere Medien",
     "HeaderCancelSyncJob": "Synchronisierung abbrechen",
-    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
+    "CancelSyncJobConfirmation": "Der Abbruch der Synchronisation wird bereits synchronisierte Medien bei der n\u00e4chsten Synchronisation vom Ger\u00e4t l\u00f6schen. M\u00f6chten Sie wirklich fortfahren?",
     "TabSync": "Synchronisieren",
     "MessagePleaseSelectDeviceToSyncTo": "Bitte w\u00e4hlen Sie ein zu synchronisierendes Ger\u00e4t.",
     "MessageSyncJobCreated": "Synchronisations-Aufgabe erstellt.",
