--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -117,7 +117,7 @@
     "HeaderSelectSubtitles": "Seleccionar Subtitulos",
     "ButtonMarkForRemoval": "Remover de dispositivo",
     "ButtonUnmarkForRemoval": "Cancelar remover de dispositivo",
-    "LabelSyncQualityHelp": "Utilice alta calidad para la calidad m\u00e1xima soportada por el dispositivo. La calidad media y baja reducir\u00e1n la tasa de bits permitida. Original har\u00e1 sinc del archivo original, sin importar si el dispositivo es capaz de reproducirlo o no.",
+    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Por defecto)",
     "LabelForcedStream": "(Forzado)",
     "LabelDefaultForcedStream": "(Por Defecto\/Forzado)",
@@ -577,6 +577,7 @@
     "ValuePremieres": "Estrenos: {0}",
     "ValueStudio": "Estudio: {0}",
     "ValueStudios": "Estudios: {0}",
+    "ValueStatus": "Status: {0}",
     "ValueSpecialEpisodeName": "Especial: {0}",
     "LabelLimit": "L\u00edmite:",
     "ValueLinks": "Enlaces: {0}",
