--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -117,7 +117,7 @@
     "HeaderSelectSubtitles": "S\u00e9lectionner sous-titres",
     "ButtonMarkForRemoval": "Supprimer de l'appareil",
     "ButtonUnmarkForRemoval": "Annuler la suppression de l'appareil",
-    "LabelSyncQualityHelp": "Utilisez haute qualit\u00e9 pour obtenir la qualit\u00e9 maximale support\u00e9e par l'appareil. Moyenne et basse qualit\u00e9 r\u00e9duiront le d\u00e9bit autoris\u00e9. Original synchronisera le fichier d'origine, ind\u00e9pendamment de la capacit\u00e9 de l'appareil \u00e0 le lire.",
+    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Par d\u00e9faut)",
     "LabelForcedStream": "(Forc\u00e9)",
     "LabelDefaultForcedStream": "(Par d\u00e9faut\/Forc\u00e9)",
@@ -577,6 +577,7 @@
     "ValuePremieres": "Acteurs principaux {0}",
     "ValueStudio": "Studio: {0}",
     "ValueStudios": "Studios: {0}",
+    "ValueStatus": "Etat: {0}",
     "ValueSpecialEpisodeName": "Sp\u00e9cial - {0}",
     "LabelLimit": "Limite :",
     "ValueLinks": "Liens : {0}",
@@ -713,7 +714,7 @@
     "ButtonSync": "Sync",
     "SyncMedia": "Sync. les m\u00e9dias",
     "HeaderCancelSyncJob": "Annuler la sync.",
-    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
+    "CancelSyncJobConfirmation": "L'annulation d'une t\u00e2che de synchronisation provoquera la suppression des m\u00e9dias synchronis\u00e9s lors la prochaine ex\u00e9cution de la synchronisation. Etes-vous s\u00fbr de vouloir continuer ?",
     "TabSync": "Sync",
     "MessagePleaseSelectDeviceToSyncTo": "Veuillez s\u00e9lectionner un p\u00e9riph\u00e9rique avec lequel se synchroniser.",
     "MessageSyncJobCreated": "Job de synchronisation cr\u00e9\u00e9.",
