--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -117,7 +117,7 @@
     "HeaderSelectSubtitles": "Seleziona sottotitoli",
     "ButtonMarkForRemoval": "Rimuovi dal dispositivo",
     "ButtonUnmarkForRemoval": "Annulla rimozione dal dispositivo",
-    "LabelSyncQualityHelp": "Utilizzare alta qualit\u00e0 per la massima supportata qualit\u00e0 dal dispositivo. Media e bassa qualit\u00e0 riduce il bitrate consentito. Original sincronizzer\u00e0 il file originale, indipendentemente dal fatto che il dispositivo \u00e8 in grado di riprodurre o meno.",
+    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Predefinito)",
     "LabelForcedStream": "(forzato)",
     "LabelDefaultForcedStream": "(Predefinito\/Forzato)",
@@ -577,6 +577,7 @@
     "ValuePremieres": "Debuttato {0}",
     "ValueStudio": "Studio: {0}",
     "ValueStudios": "Studi: {0}",
+    "ValueStatus": "Status: {0}",
     "ValueSpecialEpisodeName": "Speciali - {0}",
     "LabelLimit": "Limite:",
     "ValueLinks": "Collegamenti: {0}",
