--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -117,7 +117,7 @@
     "HeaderSelectSubtitles": "Velg Undertekst",
     "ButtonMarkForRemoval": "Fjern fra enheten.",
     "ButtonUnmarkForRemoval": "Avbryt fjerning fra enheten",
-    "LabelSyncQualityHelp": "Bruk h\u00f8y kvalitet for den aller beste kvaliteten din enhet st\u00f8tter. Medium og Lav kvalitet vil redusere tillatt bitrate. Original vil synkronisere den originale filen uavhengig om enheten er i stand til \u00e5 spille den eller ikke.",
+    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Standard)",
     "LabelForcedStream": "(Tvunget)",
     "LabelDefaultForcedStream": "(Standard\/Tvunget)",
@@ -577,6 +577,7 @@
     "ValuePremieres": "Premiere {0}",
     "ValueStudio": "Studio: {0}",
     "ValueStudios": "Studioer: {0}",
+    "ValueStatus": "Status: {0}",
     "ValueSpecialEpisodeName": "Spesiell - {0}",
     "LabelLimit": "Grense:",
     "ValueLinks": "Lenker: {0}",
