--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -117,7 +117,7 @@
     "HeaderSelectSubtitles": "Selecteer Ondertitels",
     "ButtonMarkForRemoval": "Van apparaat verwijderen",
     "ButtonUnmarkForRemoval": "Afbreken verwijderen van apparaat",
-    "LabelSyncQualityHelp": "Gebruik hoge kwaliteit om de maximaal ondersteunde kwaliteit van het apparaat te gebruiken. Medium en laad zal de bitrate verlagen. Origineel zal het bestand ongewijzigd synchroniseren, ongeacht op het apparaat het af kan spelen.",
+    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Standaard)",
     "LabelForcedStream": "(Geforceerd)",
     "LabelDefaultForcedStream": "(Standaard \/ Georceerd)",
@@ -577,6 +577,7 @@
     "ValuePremieres": "Premieres {0}",
     "ValueStudio": "Studio: {0}",
     "ValueStudios": "Studio's: {0}",
+    "ValueStatus": "Status: {0}",
     "ValueSpecialEpisodeName": "Speciaal - {0}",
     "LabelLimit": "Limiet:",
     "ValueLinks": "Links: {0}",
