--- a/MediaBrowser.Server.Implementations/Localization/Server/cs.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/cs.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "\u017div\u00e1 TV",
     "LabelNumberOfGuideDays": "Po\u010det dn\u016f pro sta\u017een\u00ed dat pr\u016fvodce:",
     "LabelNumberOfGuideDaysHelp": "Sta\u017een\u00edm v\u00edce dn\u016f dat pr\u016fvodce umo\u017en\u00ed v pl\u00e1nech nastavit budouc\u00ed nahr\u00e1v\u00e1n\u00ed v\u00edce do budoucna. M\u016f\u017ee v\u0161ak d\u00e9le trvat sta\u017een\u00ed t\u011bchto dat. Auto vybere mo\u017enost podle po\u010dtu kan\u00e1l\u016f.",
-    "LabelActiveService": "Aktivn\u00ed slu\u017eby:",
-    "LabelActiveServiceHelp": "M\u016f\u017ee b\u00fdt nainstalov\u00e1no v\u00edce plugin\u016f pro TV, ale jen jeden m\u016f\u017ee b\u00fdt aktivn\u00ed.",
     "OptionAutomatic": "Auto",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "P\u0159ed pokra\u010dov\u00e1n\u00edm je vy\u017eadov\u00e1n plugin TV poskytovatele.",
     "LiveTvPluginRequiredHelp": "Pros\u00edm nainstalujte jeden z dostupn\u00fdch plugin\u016f, jako Next PVR nebo ServerWmc",
     "LabelCustomizeOptionsPerMediaType": "Customize for media type:",
