--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "Live-TV",
     "LabelNumberOfGuideDays": "Anzahl von Tagen f\u00fcr die Programminformationen geladen werden sollen:",
     "LabelNumberOfGuideDaysHelp": "Das laden von zus\u00e4tzlichen Programmdaten bietet einen besseren \u00dcberblick und die M\u00f6glichkeit weiter in die Zukunft zu planen. Aber es wird l\u00e4nger dauern alles herunterzuladen. Auto w\u00e4hlt auf Grundlage der Kanalanzahl.",
-    "LabelActiveService": "Aktiver Service:",
-    "LabelActiveServiceHelp": "Mehrere TV Plugins k\u00f6nnen installiert sein, aber nur eines kann aktiv sein.",
     "OptionAutomatic": "Auto",
+    "HeaderServices": "Dienste",
     "LiveTvPluginRequired": "Ein Live-TV Serviceproviderplugin ist notwendig um fortzufahren.",
     "LiveTvPluginRequiredHelp": "Bitte installiere eines der verf\u00fcgbaren Plugins, wie z.B. Next Pvr oder ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Anpassungen f\u00fcr Medientyp:",
