--- a/MediaBrowser.Server.Implementations/Localization/Server/es.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "Tv en vivo",
     "LabelNumberOfGuideDays": "N\u00famero de d\u00edas de descarga de la gu\u00eda.",
     "LabelNumberOfGuideDaysHelp": "Descargar m\u00e1s d\u00edas de la gu\u00eda ofrece la posibilidad de programar grabaciones con mayor antelaci\u00f3n y ver m\u00e1s listas, pero tambi\u00e9n tarda m\u00e1s en descargarse. Auto elegir\u00e1 en funci\u00f3n del n\u00famero de canales.",
-    "LabelActiveService": "Activar servicio",
-    "LabelActiveServiceHelp": "Es posible instalar m\u00faltiples plugins de tv, pero s\u00f3lo puede estar activo uno a la vez.",
     "OptionAutomatic": "Auto",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "El servicio de TV en vivo es necesario para poder continuar.",
     "LiveTvPluginRequiredHelp": "Instale uno de los plugins disponibles, como Next Pvr o ServerVmc.",
     "LabelCustomizeOptionsPerMediaType": "Personalizar por tipo de medio:",
