--- a/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "TV en Vivo",
     "LabelNumberOfGuideDays": "N\u00famero de d\u00edas de datos de la programaci\u00f3n a descargar",
     "LabelNumberOfGuideDaysHelp": "Descargar m\u00e1s d\u00edas de datos de programaci\u00f3n permite programar con mayor anticipaci\u00f3n y ver m\u00e1s listados, pero tomar\u00e1 m\u00e1s tiempo en descargar. Auto har\u00e1 la selecci\u00f3n basada en el n\u00famero de canales.",
-    "LabelActiveService": "Servicio Activo:",
-    "LabelActiveServiceHelp": "Es posible instalar m\u00faltiples complementos de TV, pero solo uno puede estar activo en un momento dado.",
     "OptionAutomatic": "Auto",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "Se requiere de un complemento proveedor de servicios de TV en vivo para continuar.",
     "LiveTvPluginRequiredHelp": "Por favor instale alguno de los complementos disponibles, como Next PVR o ServerWMC.",
     "LabelCustomizeOptionsPerMediaType": "Personalizar por tipo de medio:",
