--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "TV en direct",
     "LabelNumberOfGuideDays": "Nombre de jours de donn\u00e9es du guide \u00e0 t\u00e9l\u00e9charger:",
     "LabelNumberOfGuideDaysHelp": "Le t\u00e9l\u00e9chargement de plus de journ\u00e9es dans le guide horaire permet de programmer des enregistrements plus longtemps \u00e0 l'avance et de visualiser plus de contenus, mais prendra \u00e9galement plus de temps. \"Auto\" permettra une s\u00e9lection automatique bas\u00e9e sur le nombre de cha\u00eenes.",
-    "LabelActiveService": "Service Actif:",
-    "LabelActiveServiceHelp": "Plusieurs Plugins de TV peuvent \u00eatre install\u00e9s mais seulement un \u00e0 la fois peut \u00eatre actif.",
     "OptionAutomatic": "Auto",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "Un fournisseur de service de TV en direct est requis pour continuer.",
     "LiveTvPluginRequiredHelp": "Merci d'installer un de nos plugins disponibles, comme Next Pvr ou ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Personnaliser pour le type de m\u00e9dia:",
