--- a/MediaBrowser.Server.Implementations/Localization/Server/hr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/hr.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "TV",
     "LabelNumberOfGuideDays": "Broj dana TV vodi\u010da za preuzet:",
     "LabelNumberOfGuideDaysHelp": "Preuzimanje vi\u0161e dana TV vodi\u010da, omogu\u0107iti \u0107e vam zakazivanje snimanja dalje u budu\u0107nost , ali \u0107e i preuzimanje du\u017ee trajati. Automaski - odabir \u0107e se prilagoditi broju kanala.",
-    "LabelActiveService": "Aktivne usluge:",
-    "LabelActiveServiceHelp": "Vi\u0161e TV dodataka mo\u017ee biti instalirano ali samo jedan mo\u017ee biti aktivan u isto vrijeme.",
     "OptionAutomatic": "Automatski",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "TV u\u017eivo usluga je obavezna ako \u017eelite nastaviti.",
     "LiveTvPluginRequiredHelp": "Molimo instalirajte jedan od dostupnih dodataka, kaoo \u0161to su Next Pvr ili ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Customize for media type:",
