--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "Tv in diretta",
     "LabelNumberOfGuideDays": "Numero di giorni per i quali scaricare i dati della guida:",
     "LabelNumberOfGuideDaysHelp": "Scaricando pi\u00f9 giorni si avr\u00e0 la possibilit\u00e0 di pianificare in anticipo pi\u00f9 programmi e vedere pi\u00f9 liste. 'Auto': MB sceglier\u00e0 automaticamente in base al numero di canali.",
-    "LabelActiveService": "Servizio attivo:",
-    "LabelActiveServiceHelp": "Possono essere installati pi\u00f9 plugins Tv ma solo uno alla volta pu\u00f2 essere attivato",
     "OptionAutomatic": "Automatico",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "E' richiesto il servizio LIVE TV per continuare.",
     "LiveTvPluginRequiredHelp": "Installa un servizio disponibile, come Next Pvr or ServerWMC.",
     "LabelCustomizeOptionsPerMediaType": "Personalizza per il tipo di supporto:",
