--- a/MediaBrowser.Server.Implementations/Localization/Server/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nb.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "Live TV",
     "LabelNumberOfGuideDays": "Antall dager av guide data som skal lastes ned",
     "LabelNumberOfGuideDaysHelp": "Nedlasting av guide data for flere dager gir muligheten for \u00e5 planlegge i forveien og for \u00e5 se flere listinger. Dette vil ogs\u00e5 ta lengre tid for nedlasting. Auto vil velge basert p\u00e5 antall kanaler.",
-    "LabelActiveService": "Aktive Tjenester:",
-    "LabelActiveServiceHelp": "Flere TV programtillegg kan bli installert, men kun \u00e9n kan v\u00e6re aktiv av gangen.",
     "OptionAutomatic": "Auto",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "En Live TV tilbyder trengs for \u00e5 kunne fortsette.",
     "LiveTvPluginRequiredHelp": "Vennligst installer en av v\u00e5re tilgjengelige programtillegg, f.eks Next Pvr eller ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Tilpass for media type:",
