--- a/MediaBrowser.Server.Implementations/Localization/Server/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nl.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "Live TV",
     "LabelNumberOfGuideDays": "Aantal dagen van de gids om te downloaden:",
     "LabelNumberOfGuideDaysHelp": "Het downloaden van meer dagen van de gids gegevens biedt de mogelijkheid verder vooruit te plannen en een beter overzicht geven, maar het zal ook langer duren om te downloaden. Auto kiest op basis van het aantal kanalen.",
-    "LabelActiveService": "Actieve Service:",
-    "LabelActiveServiceHelp": "Er kunnen meerdere tv Plug-ins worden ge\u00efnstalleerd, maar er kan er slechts een per keer actief zijn.",
     "OptionAutomatic": "Automatisch",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "Een Live TV service provider Plug-in is vereist om door te gaan.",
     "LiveTvPluginRequiredHelp": "Installeer a.u b een van onze beschikbare Plug-ins, zoals Next PVR of ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Aanpassen voor mediatype",
