--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "TV ao Vivo",
     "LabelNumberOfGuideDays": "N\u00famero de dias de dados do guia para download:",
     "LabelNumberOfGuideDaysHelp": "Fazer download de mais dias de dados do guia permite agendar com mais anteced\u00eancia e ver mais itens, mas tamb\u00e9m levar\u00e1 mais tempo para o download. Auto escolher\u00e1 com base no n\u00famero de canais.",
-    "LabelActiveService": "Servi\u00e7o Ativo:",
-    "LabelActiveServiceHelp": "V\u00e1rios plugins de tv podem ser instalados, mas apenas um pode estar ativo de cada vez.",
     "OptionAutomatic": "Auto",
+    "HeaderServices": "Servi\u00e7os",
     "LiveTvPluginRequired": "Um provedor de servi\u00e7o de TV ao Vivo \u00e9 necess\u00e1rio para continuar.",
     "LiveTvPluginRequiredHelp": "Por favor, instale um de nossos plugins dispon\u00edveis como, por exemplo, Next Pvr ou ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Personalizar para o tipo de m\u00eddia:",
