--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_PT.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_PT.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "TV ao Vivo",
     "LabelNumberOfGuideDays": "N\u00famero de dias de informa\u00e7\u00e3o do guia para transferir:",
     "LabelNumberOfGuideDaysHelp": "Transferir mais dias de informa\u00e7\u00e3o do guia permite agendar com maior anteced\u00eancia e ver mais listagens, no entanto ir\u00e1 levar mais tempo a transferir. Se optar que seja Autom\u00e1tico, ser\u00e1 escolhido baseado no n\u00famero de canais.",
-    "LabelActiveService": "Ativar Servi\u00e7o:",
-    "LabelActiveServiceHelp": "Podem ser instalados m\u00faltiplas extens\u00f5es para TV, mas s\u00f3 pode estar ativo um de cada vez.",
     "OptionAutomatic": "Autom\u00e1tico",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "Uma extens\u00e3o de um fornecedor de servi\u00e7o de TV ao Vivo \u00e9 necess\u00e1rio para continuar.",
     "LiveTvPluginRequiredHelp": "Por favor instale uma das nossas extens\u00f5es dispon\u00edveis, como a Next Pvr ou ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Personalizar para o tipo de conte\u00fado:",
