--- a/MediaBrowser.Server.Implementations/Localization/Server/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/sv.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "Live-TV",
     "LabelNumberOfGuideDays": "Antal dagars tabl\u00e5 att h\u00e4mta",
     "LabelNumberOfGuideDaysHelp": "H\u00e4mtning av en l\u00e4ngre periods tabl\u00e5 ger m\u00f6jlighet att boka inspelningar och se program l\u00e4ngre fram i tiden, men ger l\u00e4ngre nedladdningstid. \"Auto\" v\u00e4ljer baserat p\u00e5 antalet kanaler.",
-    "LabelActiveService": "Aktuell tj\u00e4nst:",
-    "LabelActiveServiceHelp": "Flera TV-till\u00e4gg kan vara installerade men bara en \u00e5t g\u00e5ngen kan vara aktiv.",
     "OptionAutomatic": "Auto",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "Du m\u00e5ste ha ett till\u00e4gg f\u00f6r live-TV installerad f\u00f6r att kunna forts\u00e4tta.",
     "LiveTvPluginRequiredHelp": "Installera ett av v\u00e5ra till\u00e4gg, t ex Next PVR eller ServerWMC.",
     "LabelCustomizeOptionsPerMediaType": "Anpassa f\u00f6r typ av media:",
