--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "\u7535\u89c6\u76f4\u64ad",
     "LabelNumberOfGuideDays": "\u4e0b\u8f7d\u51e0\u5929\u7684\u8282\u76ee\u6307\u5357\uff1a",
     "LabelNumberOfGuideDaysHelp": "\u4e0b\u8f7d\u66f4\u591a\u5929\u7684\u8282\u76ee\u6307\u5357\u53ef\u4ee5\u5e2e\u4f60\u8fdb\u4e00\u6b65\u67e5\u770b\u8282\u76ee\u5217\u8868\u5e76\u505a\u51fa\u63d0\u524d\u5b89\u6392\uff0c\u4f46\u4e0b\u8f7d\u8fc7\u7a0b\u4e5f\u5c06\u8017\u65f6\u66f4\u4e45\u3002\u5b83\u5c06\u57fa\u4e8e\u9891\u9053\u6570\u91cf\u81ea\u52a8\u9009\u62e9\u3002",
-    "LabelActiveService": "\u8fd0\u884c\u4e2d\u7684\u670d\u52a1\uff1a",
-    "LabelActiveServiceHelp": "\u591a\u4e2a\u7535\u89c6\u63d2\u4ef6\u53ef\u4ee5\u5b89\u88c5\uff0c\u4f46\u5728\u540c\u4e00\u65f6\u95f4\u53ea\u6709\u4e00\u4e2a\u53ef\u4ee5\u8fd0\u884c\u3002",
     "OptionAutomatic": "\u81ea\u52a8",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "\u8981\u7ee7\u7eed\u7684\u8bdd\u8bf7\u81f3\u5c11\u5b89\u88c5\u4e00\u4e2a\u7535\u89c6\u76f4\u64ad\u63d2\u4ef6\u3002",
     "LiveTvPluginRequiredHelp": "\u8bf7\u81f3\u5c11\u5b89\u88c5\u4e00\u4e2a\u6211\u4eec\u6240\u63d0\u4f9b\u7684\u63d2\u4ef6\uff0c\u4f8b\u5982\uff1aNext Pvr \u6216\u8005 ServerWmc\u3002",
     "LabelCustomizeOptionsPerMediaType": "\u81ea\u5b9a\u4e49\u5a92\u4f53\u7c7b\u578b\uff1a",
