--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_TW.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_TW.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "\u96fb\u8996\u529f\u80fd",
     "LabelNumberOfGuideDays": "Number of days of guide data to download:",
     "LabelNumberOfGuideDaysHelp": "Downloading more days worth of guide data provides the ability to schedule out further in advance and view more listings, but it will also take longer to download. Auto will choose based on the number of channels.",
-    "LabelActiveService": "\u904b\u884c\u4e2d\u7684\u670d\u52d9",
-    "LabelActiveServiceHelp": "\u53ef\u5b89\u88dd\u591a\u500b\u96fb\u8996\u529f\u80fd\u63d2\u4ef6\u53ef\uff0c\u4f46\u53ea\u6709\u4e00\u500b\u53ef\u4ee5\u5728\u540c\u4e00\u6642\u9593\u662f\u904b\u884c\u3002",
     "OptionAutomatic": "\u81ea\u52d5",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "\u9700\u8981\u5b89\u88dd\u81f3\u5c11\u4e00\u500b\u96fb\u8996\u529f\u80fd\u63d2\u4ef6\u53bb\u7e7c\u7e8c",
     "LiveTvPluginRequiredHelp": "\u8acb\u5b89\u88dd\u4e00\u500b\u6211\u5011\u63d0\u4f9b\u7684\u63d2\u4ef6\uff0c\u5982Next PVR\u7684\u6216ServerWmc\u3002",
     "LabelCustomizeOptionsPerMediaType": "Customize for media type:",
