--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/cs.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/cs.json
@@ -117,7 +117,7 @@
     "HeaderSelectSubtitles": "Select Subtitles",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate. Original will sync the original file, regardless of whether the device is capable of playing it or not.",
+    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default\/Forced)",
@@ -577,6 +577,7 @@
     "ValuePremieres": "Premieres {0}",
     "ValueStudio": "Studio: {0}",
     "ValueStudios": "Studios: {0}",
+    "ValueStatus": "Status: {0}",
     "ValueSpecialEpisodeName": "Special - {0}",
     "LabelLimit": "Limit:",
     "ValueLinks": "Links: {0}",
