--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -117,7 +117,7 @@
     "HeaderSelectSubtitles": "Selecione Legendas",
     "ButtonMarkForRemoval": "Remover do dispositivo",
     "ButtonUnmarkForRemoval": "Cancelar remo\u00e7\u00e3o do dispositivo",
-    "LabelSyncQualityHelp": "Use alta qualidade para usar a qualidade m\u00e1xima suportada pelo dispositivo. Qualidades m\u00e9dia e baixa reduzir\u00e3o a taxa permitida. Original sincronizar\u00e1 o arquivo original, independente se o dispositivo ser\u00e1 capaz de reproduzi-lo.",
+    "LabelSyncQualityHelp": "Selecione a qualidade desejada. Qualidade original sincronizar\u00e1 o arquivo original, independente se o dispositivo ser\u00e1 capaz de reproduzi-lo.",
     "LabelDefaultStream": "(Padr\u00e3o)",
     "LabelForcedStream": "(For\u00e7ada)",
     "LabelDefaultForcedStream": "(Padr\u00e3o\/For\u00e7ada)",
@@ -577,6 +577,7 @@
     "ValuePremieres": "Estr\u00e9ia {0}",
     "ValueStudio": "Est\u00fadio: {0}",
     "ValueStudios": "Est\u00fadios: {0}",
+    "ValueStatus": "Status: {0}",
     "ValueSpecialEpisodeName": "Especial -  {0}",
     "LabelLimit": "Limite:",
     "ValueLinks": "Links: {0}",
@@ -713,7 +714,7 @@
     "ButtonSync": "Sincronizar",
     "SyncMedia": "Sincronizar M\u00eddia",
     "HeaderCancelSyncJob": "Cancelar Sincroniza\u00e7\u00e3o",
-    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
+    "CancelSyncJobConfirmation": "Cancelar a tarefa de sincroniza\u00e7\u00e3o remover\u00e1 m\u00eddias sincronizadas do dispositivo durante o pr\u00f3ximo processo de sincroniza\u00e7\u00e3o. Deseja realmente proceder?",
     "TabSync": "Sincroniza\u00e7\u00e3o",
     "MessagePleaseSelectDeviceToSyncTo": "Por favor, selecione um dispositivo para sincronizar.",
     "MessageSyncJobCreated": "Tarefa de sincroniza\u00e7\u00e3o criada.",
