--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/uk.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/uk.json
@@ -44,7 +44,7 @@
     "PluginCategoryTheme": "Themes",
     "PluginCategorySync": "Sync",
     "PluginCategorySocialIntegration": "Social Networks",
-    "PluginCategoryNotifications": "Notifications",
+    "PluginCategoryNotifications": "\u041f\u043e\u0432\u0456\u0434\u043e\u043c\u043b\u0435\u043d\u043d\u044f",
     "PluginCategoryMetadata": "Metadata",
     "PluginCategoryLiveTV": "Live TV",
     "PluginCategoryChannel": "Channels",
@@ -117,7 +117,7 @@
     "HeaderSelectSubtitles": "Select Subtitles",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate. Original will sync the original file, regardless of whether the device is capable of playing it or not.",
+    "LabelSyncQualityHelp": "Select the desired quality. Original quality will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default\/Forced)",
@@ -137,8 +137,8 @@
     "LabelEnabled": "Enabled",
     "LabelDisabled": "Disabled",
     "ButtonMoreInformation": "More Information",
-    "LabelNoUnreadNotifications": "No unread notifications.",
-    "ButtonViewNotifications": "View notifications",
+    "LabelNoUnreadNotifications": "\u041d\u0435\u043c\u0430\u0454 \u043d\u0435\u043f\u0440\u043e\u0447\u0438\u0442\u0430\u043d\u0438\u0445 \u043f\u043e\u0432\u0456\u0434\u043e\u043c\u043b\u0435\u043d\u044c.",
+    "ButtonViewNotifications": "\u041f\u0435\u0440\u0435\u0433\u043b\u044f\u043d\u0443\u0442\u0438 \u043f\u043e\u0432\u0456\u0434\u043e\u043c\u043b\u0435\u043d\u043d\u044f",
     "ButtonMarkTheseRead": "Mark these read",
     "ButtonClose": "Close",
     "LabelAllPlaysSentToPlayer": "All plays will be sent to the selected player.",
@@ -191,10 +191,10 @@
     "HeaderResume": "Resume",
     "HeaderMyViews": "My Views",
     "HeaderLibraryFolders": "Media Folders",
-    "HeaderLatestMedia": "Latest Media",
+    "HeaderLatestMedia": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u043c\u0435\u0434\u0456\u0430",
     "ButtonMoreItems": "More...",
     "ButtonMore": "More",
-    "HeaderFavoriteMovies": "Favorite Movies",
+    "HeaderFavoriteMovies": "\u0423\u043b\u044e\u0431\u043b\u0435\u043d\u0456 \u0444\u0456\u043b\u044c\u043c\u0438",
     "HeaderFavoriteShows": "Favorite Shows",
     "HeaderFavoriteEpisodes": "Favorite Episodes",
     "HeaderFavoriteGames": "Favorite Games",
@@ -296,9 +296,9 @@
     "HeaderBlockItemsWithNoRating": "Block content with no rating information:",
     "OptionBlockOthers": "Others",
     "OptionBlockTvShows": "TV Shows",
-    "OptionBlockTrailers": "Trailers",
+    "OptionBlockTrailers": "\u0422\u0440\u0435\u0439\u043b\u0435\u0440\u0438",
     "OptionBlockMusic": "Music",
-    "OptionBlockMovies": "Movies",
+    "OptionBlockMovies": "\u0424\u0456\u043b\u044c\u043c\u0438",
     "OptionBlockBooks": "Books",
     "OptionBlockGames": "Games",
     "OptionBlockLiveTvPrograms": "Live TV Programs",
@@ -346,7 +346,7 @@
     "OptionImages": "Images",
     "OptionKeywords": "Keywords",
     "OptionTags": "Tags",
-    "OptionStudios": "Studios",
+    "OptionStudios": "\u0421\u0442\u0443\u0434\u0456\u0457",
     "OptionName": "Name",
     "OptionOverview": "Overview",
     "OptionGenres": "Genres",
@@ -392,7 +392,7 @@
     "ButtonSubtitles": "Subtitles",
     "ButtonScenes": "Scenes",
     "ButtonQuality": "\u042f\u043a\u0456\u0441\u0442\u044c",
-    "HeaderNotifications": "Notifications",
+    "HeaderNotifications": "\u041f\u043e\u0432\u0456\u0434\u043e\u043c\u043b\u0435\u043d\u043d\u044f",
     "HeaderSelectPlayer": "Select Player:",
     "ButtonSelect": "Select",
     "ButtonNew": "\u041d\u043e\u0432\u0438\u0439",
@@ -410,7 +410,7 @@
     "ValueOriginalAirDate": "Original air date: {0}",
     "ButtonRemoveFromPlaylist": "Remove from playlist",
     "HeaderSpecials": "Specials",
-    "HeaderTrailers": "Trailers",
+    "HeaderTrailers": "\u0422\u0440\u0435\u0439\u043b\u0435\u0440\u0438",
     "HeaderAudio": "\u0410\u0443\u0434\u0456\u043e",
     "HeaderResolution": "Resolution",
     "HeaderVideo": "\u0412\u0456\u0434\u0435\u043e",
@@ -429,8 +429,8 @@
     "HeaderEmbeddedImage": "Embedded image",
     "HeaderTrack": "\u0414\u043e\u0440\u0456\u0436\u043a\u0430",
     "HeaderDisc": "\u0414\u0438\u0441\u043a",
-    "OptionMovies": "Movies",
-    "OptionCollections": "\u041a\u043e\u043b\u0435\u043a\u0446\u0456\u044f",
+    "OptionMovies": "\u0424\u0456\u043b\u044c\u043c\u0438",
+    "OptionCollections": "\u041a\u043e\u043b\u0435\u043a\u0446\u0456\u0457",
     "OptionSeries": "\u0421\u0435\u0440\u0456\u044f",
     "OptionSeasons": "\u0421\u0435\u0437\u043e\u043d\u0438",
     "OptionEpisodes": "Episodes",
@@ -489,7 +489,7 @@
     "LabelContentTypeValue": "Content type: {0}",
     "LabelPathSubstitutionHelp": "Optional: Path substitution can map server paths to network shares that clients can access for direct playback.",
     "FolderTypeUnset": "Unset (mixed content)",
-    "FolderTypeMovies": "Movies",
+    "FolderTypeMovies": "\u0424\u0456\u043b\u044c\u043c\u0438",
     "FolderTypeMusic": "\u041c\u0443\u0437\u0438\u043a\u0430",
     "FolderTypeAdultVideos": "Adult videos",
     "FolderTypePhotos": "\u0421\u0432\u0456\u0442\u043b\u0438\u043d\u0438",
@@ -498,10 +498,10 @@
     "FolderTypeGames": "\u0406\u0433\u0440\u0438",
     "FolderTypeBooks": "\u041a\u043d\u0438\u0433\u0438",
     "FolderTypeTvShows": "\u0422\u0411",
-    "TabMovies": "Movies",
+    "TabMovies": "\u0424\u0456\u043b\u044c\u043c\u0438",
     "TabSeries": "Series",
     "TabEpisodes": "\u0415\u043f\u0456\u0437\u043e\u0434\u0438",
-    "TabTrailers": "Trailers",
+    "TabTrailers": "\u0422\u0440\u0435\u0439\u043b\u0435\u0440\u0438",
     "TabGames": "Games",
     "TabAlbums": "Albums",
     "TabSongs": "Songs",
@@ -577,6 +577,7 @@
     "ValuePremieres": "Premieres {0}",
     "ValueStudio": "\u0421\u0442\u0443\u0434\u0456\u044f: {0}",
     "ValueStudios": "\u0421\u0442\u0443\u0434\u0456\u0457: {0}",
+    "ValueStatus": "Status: {0}",
     "ValueSpecialEpisodeName": "Special - {0}",
     "LabelLimit": "\u041e\u0431\u043c\u0435\u0436\u0435\u043d\u043d\u044f:",
     "ValueLinks": "\u041f\u043e\u0441\u0438\u043b\u0430\u043d\u043d\u044f: {0}",
