--- a/MediaBrowser.Server.Implementations/Localization/Server/da.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/da.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "Direkte TV",
     "LabelNumberOfGuideDays": "Antal dage af program guide data til download:",
     "LabelNumberOfGuideDaysHelp": "Hentning af flere dages program guide data giver mulighed for at planl\u00e6gge l\u00e6ngere ud i fremtiden, og se flere programoversigter, men det vil ogs\u00e5 tage l\u00e6ngere tid at downloade. Auto vil v\u00e6lge baseret p\u00e5 antallet af kanaler.",
-    "LabelActiveService": "Active Service:",
-    "LabelActiveServiceHelp": "Multiple tv plugins can be installed but only one can be active at a time.",
     "OptionAutomatic": "Auto",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "A Live TV service provider plugin is required in order to continue.",
     "LiveTvPluginRequiredHelp": "Please install one of our available plugins, such as Next Pvr or ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Customize for media type:",
