--- a/MediaBrowser.Server.Implementations/Localization/Server/tr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/tr.json
@@ -414,9 +414,8 @@
     "TitleLiveTV": "Canl\u0131 TV",
     "LabelNumberOfGuideDays": "Number of days of guide data to download:",
     "LabelNumberOfGuideDaysHelp": "Downloading more days worth of guide data provides the ability to schedule out further in advance and view more listings, but it will also take longer to download. Auto will choose based on the number of channels.",
-    "LabelActiveService": "Aktif Servis:",
-    "LabelActiveServiceHelp": "Multiple tv plugins can be installed but only one can be active at a time.",
     "OptionAutomatic": "Otomatik",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "A Live TV service provider plugin is required in order to continue.",
     "LiveTvPluginRequiredHelp": "Please install one of our available plugins, such as Next Pvr or ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Customize for media type:",
