--- a/MediaBrowser.Server.Implementations/Localization/Server/uk.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/uk.json
@@ -75,7 +75,7 @@
     "LabelSyncTempPathHelp": "Specify a custom sync working folder. Converted media created during the sync process will be stored here.",
     "LabelCustomCertificatePath": "Custom certificate path:",
     "LabelCustomCertificatePathHelp": "Supply your own ssl certificate .pfx file. If omitted, the server will create a self-signed certificate.",
-    "TitleNotifications": "\u0421\u043f\u043e\u0432\u0456\u0449\u0435\u043d\u043d\u044f",
+    "TitleNotifications": "\u041f\u043e\u0432\u0456\u0434\u043e\u043c\u043b\u0435\u043d\u043d\u044f",
     "ButtonDonateWithPayPal": "Donate with PayPal",
     "OptionDetectArchiveFilesAsMedia": "Detect archive files as media",
     "OptionDetectArchiveFilesAsMediaHelp": "If enabled, files with .rar and .zip extensions will be detected as media files.",
@@ -85,7 +85,7 @@
     "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
     "HeaderSyncJobInfo": "Sync Job",
     "FolderTypeMixed": "Mixed content",
-    "FolderTypeMovies": "Movies",
+    "FolderTypeMovies": "\u0424\u0456\u043b\u044c\u043c\u0438",
     "FolderTypeMusic": "\u041c\u0443\u0437\u0438\u043a\u0430",
     "FolderTypeAdultVideos": "Adult videos",
     "FolderTypePhotos": "\u0421\u0432\u0456\u0442\u043b\u0438\u043d\u0438",
@@ -184,7 +184,7 @@
     "HeaderResume": "Resume",
     "HeaderNextUp": "Next Up",
     "NoNextUpItemsMessage": "None found. Start watching your shows!",
-    "HeaderLatestEpisodes": "Latest Episodes",
+    "HeaderLatestEpisodes": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u0435\u043f\u0456\u0437\u043e\u0434\u0438",
     "HeaderPersonTypes": "Person Types:",
     "TabSongs": "Songs",
     "TabAlbums": "Albums",
@@ -229,8 +229,8 @@
     "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "\u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u043d\u0435 \u043e\u043d\u043e\u0432\u043b\u0435\u043d\u043d\u044f",
     "HeaderNowPlaying": "Now Playing",
-    "HeaderLatestAlbums": "Latest Albums",
-    "HeaderLatestSongs": "Latest Songs",
+    "HeaderLatestAlbums": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u0430\u043b\u044c\u0431\u043e\u043c\u0438",
+    "HeaderLatestSongs": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u043f\u0456\u0441\u043d\u0456",
     "HeaderRecentlyPlayed": "Recently Played",
     "HeaderFrequentlyPlayed": "Frequently Played",
     "DevBuildWarning": "Dev builds are the bleeding edge. Released often, these build have not been tested. The application may crash and entire features may not work at all.",
@@ -248,13 +248,13 @@
     "OptionHasTrailer": "Trailer",
     "OptionHasThemeSong": "Theme Song",
     "OptionHasThemeVideo": "Theme Video",
-    "TabMovies": "Movies",
-    "TabStudios": "Studios",
-    "TabTrailers": "Trailers",
+    "TabMovies": "\u0424\u0456\u043b\u044c\u043c\u0438",
+    "TabStudios": "\u0421\u0442\u0443\u0434\u0456\u0457",
+    "TabTrailers": "\u0422\u0440\u0435\u0439\u043b\u0435\u0440\u0438",
     "LabelArtists": "Artists:",
     "LabelArtistsHelp": "Separate multiple using ;",
-    "HeaderLatestMovies": "Latest Movies",
-    "HeaderLatestTrailers": "Latest Trailers",
+    "HeaderLatestMovies": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u0444\u0456\u043b\u044c\u043c\u0438",
+    "HeaderLatestTrailers": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u0442\u0440\u0435\u0439\u043b\u0435\u0440\u0438",
     "OptionHasSpecialFeatures": "Special Features",
     "OptionImdbRating": "IMDb Rating",
     "OptionParentalRating": "Parental Rating",
@@ -348,7 +348,7 @@
     "TabMusic": "Music",
     "TabOthers": "Others",
     "HeaderExtractChapterImagesFor": "Extract chapter images for:",
-    "OptionMovies": "Movies",
+    "OptionMovies": "\u0424\u0456\u043b\u044c\u043c\u0438",
     "OptionEpisodes": "Episodes",
     "OptionOtherVideos": "Other Videos",
     "TitleMetadata": "Metadata",
@@ -376,7 +376,7 @@
     "PasswordLocalhostMessage": "Passwords are not required when logging in from localhost.",
     "TabGuide": "Guide",
     "TabChannels": "Channels",
-    "TabCollections": "Collections",
+    "TabCollections": "\u041a\u043e\u043b\u0435\u043a\u0446\u0456\u0457",
     "HeaderChannels": "Channels",
     "TabRecordings": "Recordings",
     "TabScheduled": "Scheduled",
@@ -414,9 +414,8 @@
     "TitleLiveTV": "Live TV",
     "LabelNumberOfGuideDays": "Number of days of guide data to download:",
     "LabelNumberOfGuideDaysHelp": "Downloading more days worth of guide data provides the ability to schedule out further in advance and view more listings, but it will also take longer to download. Auto will choose based on the number of channels.",
-    "LabelActiveService": "Active Service:",
-    "LabelActiveServiceHelp": "Multiple tv plugins can be installed but only one can be active at a time.",
     "OptionAutomatic": "Auto",
+    "HeaderServices": "Services",
     "LiveTvPluginRequired": "A Live TV service provider plugin is required in order to continue.",
     "LiveTvPluginRequiredHelp": "Please install one of our available plugins, such as Next Pvr or ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Customize for media type:",
@@ -452,7 +451,7 @@
     "LabelEveryXMinutes": "Every:",
     "HeaderTvTuners": "Tuners",
     "HeaderGallery": "Gallery",
-    "HeaderLatestGames": "Latest Games",
+    "HeaderLatestGames": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u0456\u0433\u0440\u0438",
     "HeaderRecentlyPlayedGames": "Recently Played Games",
     "TabGameSystems": "Game Systems",
     "TitleMediaLibrary": "Media Library",
@@ -609,7 +608,7 @@
     "OptionCopy": "Copy",
     "OptionMove": "Move",
     "LabelTransferMethodHelp": "Copy or move files from the watch folder",
-    "HeaderLatestNews": "Latest News",
+    "HeaderLatestNews": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u043d\u043e\u0432\u0438\u043d\u0438",
     "HeaderHelpImproveMediaBrowser": "Help Improve Media Browser",
     "HeaderRunningTasks": "Running Tasks",
     "HeaderActiveDevices": "Active Devices",
@@ -735,9 +734,9 @@
     "ButtonVolumeUp": "Volume up",
     "ButtonVolumeDown": "Volume down",
     "ButtonMute": "Mute",
-    "HeaderLatestMedia": "Latest Media",
+    "HeaderLatestMedia": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u043c\u0435\u0434\u0456\u0430",
     "OptionSpecialFeatures": "Special Features",
-    "HeaderCollections": "Collections",
+    "HeaderCollections": "\u041a\u043e\u043b\u0435\u043a\u0446\u0456\u0457",
     "LabelProfileCodecsHelp": "Separated by comma. This can be left empty to apply to all codecs.",
     "LabelProfileContainersHelp": "Separated by comma. This can be left empty to apply to all containers.",
     "HeaderResponseProfile": "Response Profile",
@@ -885,7 +884,7 @@
     "OptionMyViews": "My views",
     "OptionMyViewsSmall": "My views (small)",
     "OptionResumablemedia": "Resume",
-    "OptionLatestMedia": "Latest media",
+    "OptionLatestMedia": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u043c\u0435\u0434\u0456\u0430",
     "OptionLatestChannelMedia": "Latest channel items",
     "HeaderLatestChannelItems": "Latest Channel Items",
     "OptionNone": "None",
@@ -894,7 +893,7 @@
     "HeaderMetadataManager": "Metadata Manager",
     "HeaderPreferences": "Preferences",
     "MessageLoadingChannels": "Loading channel content...",
-    "MessageLoadingContent": "Loading content...",
+    "MessageLoadingContent": "\u0417\u0430\u0432\u0430\u043d\u0442\u0430\u0436\u0435\u043d\u043d\u044f \u0437\u043c\u0456\u0441\u0442\u0443...",
     "ButtonMarkRead": "Mark Read",
     "OptionDefaultSort": "Default",
     "OptionCommunityMostWatchedSort": "Most Watched",
@@ -918,17 +917,17 @@
     "LabelChannelDownloadAgeHelp": "Downloaded content older than this will be deleted. It will remain playable via internet streaming.",
     "ChannelSettingsFormHelp": "Install channels such as Trailers and Vimeo in the plugin catalog.",
     "ButtonOptions": "Options",
-    "ViewTypeMovies": "Movies",
+    "ViewTypeMovies": "\u0424\u0456\u043b\u044c\u043c\u0438",
     "ViewTypeTvShows": "TV",
     "ViewTypeGames": "Games",
     "ViewTypeMusic": "Music",
     "ViewTypeMusicGenres": "Genres",
     "ViewTypeMusicArtists": "Artists",
-    "ViewTypeBoxSets": "Collections",
+    "ViewTypeBoxSets": "\u041a\u043e\u043b\u0435\u043a\u0446\u0456\u0457",
     "ViewTypeChannels": "Channels",
     "ViewTypeLiveTV": "Live TV",
     "ViewTypeLiveTvNowPlaying": "Now Airing",
-    "ViewTypeLatestGames": "Latest Games",
+    "ViewTypeLatestGames": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u0456\u0433\u0440\u0438",
     "ViewTypeRecentlyPlayedGames": "Recently Played",
     "ViewTypeGameFavorites": "Favorites",
     "ViewTypeGameSystems": "Game Systems",
@@ -942,11 +941,11 @@
     "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
     "ViewTypeMovieResume": "Resume",
     "ViewTypeMovieLatest": "Latest",
-    "ViewTypeMovieMovies": "Movies",
-    "ViewTypeMovieCollections": "Collections",
+    "ViewTypeMovieMovies": "\u0424\u0456\u043b\u044c\u043c\u0438",
+    "ViewTypeMovieCollections": "\u041a\u043e\u043b\u0435\u043a\u0446\u0456\u0457",
     "ViewTypeMovieFavorites": "Favorites",
     "ViewTypeMovieGenres": "Genres",
-    "ViewTypeMusicLatest": "Latest",
+    "ViewTypeMusicLatest": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456",
     "ViewTypeMusicAlbums": "Albums",
     "ViewTypeMusicAlbumArtists": "Album Artists",
     "HeaderOtherDisplaySettings": "Display Settings",
@@ -961,7 +960,7 @@
     "OptionDisplayAdultContent": "Display adult content",
     "OptionLibraryFolders": "Media folders",
     "TitleRemoteControl": "Remote Control",
-    "OptionLatestTvRecordings": "Latest recordings",
+    "OptionLatestTvRecordings": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u0437\u0430\u043f\u0438\u0441\u0438",
     "LabelProtocolInfo": "Protocol info:",
     "LabelProtocolInfoHelp": "The value that will be used when responding to GetProtocolInfo requests from the device.",
     "TabNfo": "Nfo",
@@ -998,7 +997,7 @@
     "LabelMetadata": "Metadata:",
     "LabelImagesByName": "Images by name:",
     "LabelTranscodingTemporaryFiles": "Transcoding temporary files:",
-    "HeaderLatestMusic": "Latest Music",
+    "HeaderLatestMusic": "\u041e\u0441\u0442\u0430\u043d\u043d\u044f \u043c\u0443\u0437\u0438\u043a\u0430",
     "HeaderBranding": "Branding",
     "HeaderApiKeys": "Api Keys",
     "HeaderApiKeysHelp": "External applications are required to have an Api key in order to communicate with Media Browser. Keys are issued by logging in with a Media Browser account, or by manually granting the application a key.",
@@ -1077,13 +1076,13 @@
     "OptionReportSongs": "Songs",
     "OptionReportSeries": "Series",
     "OptionReportSeasons": "Seasons",
-    "OptionReportTrailers": "Trailers",
+    "OptionReportTrailers": "\u0422\u0440\u0435\u0439\u043b\u0435\u0440\u0438",
     "OptionReportMusicVideos": "Music videos",
-    "OptionReportMovies": "Movies",
+    "OptionReportMovies": "\u0424\u0456\u043b\u044c\u043c\u0438",
     "OptionReportHomeVideos": "Home videos",
     "OptionReportGames": "Games",
     "OptionReportEpisodes": "Episodes",
-    "OptionReportCollections": "Collections",
+    "OptionReportCollections": "\u041a\u043e\u043b\u0435\u043a\u0446\u0456\u0457",
     "OptionReportBooks": "Books",
     "OptionReportArtists": "Artists",
     "OptionReportAlbums": "Albums",
@@ -1200,7 +1199,7 @@
     "HeaderCountries": "Countries",
     "HeaderGenres": "Genres",
     "HeaderPlotKeywords": "Plot Keywords",
-    "HeaderStudios": "Studios",
+    "HeaderStudios": "\u0421\u0442\u0443\u0434\u0456\u0457",
     "HeaderTags": "Tags",
     "HeaderMetadataSettings": "Metadata Settings",
     "LabelLockItemToPreventChanges": "Lock this item to prevent future changes",
@@ -1341,7 +1340,7 @@
     "HeaderDashboardUserPassword": "User passwords are managed within each user's personal profile settings.",
     "HeaderLibraryAccess": "Library Access",
     "HeaderChannelAccess": "Channel Access",
-    "HeaderLatestItems": "Latest Items",
+    "HeaderLatestItems": "\u041e\u0441\u0442\u0430\u043d\u043d\u0456",
     "LabelSelectLastestItemsFolders": "Include media from the following sections in Latest Items",
     "HeaderShareMediaFolders": "Share Media Folders",
     "MessageGuestSharingPermissionsHelp": "Most features are initially unavailable to guests but can be enabled as needed.",
