add AlbumArtists to item dto's

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1172,6 +1172,7 @@
     "LabelIfYouWishToContinueWithDeletion": "If you wish to continue, please confirm by entering the value of:",
     "ButtonIdentify": "Identify",
     "LabelAlbumArtist": "Album artist:",
+    "LabelAlbumArtists": "Album artists:",
     "LabelAlbum": "Album:",
     "LabelCommunityRating": "Community rating:",
     "LabelVoteCount": "Vote count:",
