combine playlist with remote control

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -62,6 +62,7 @@
     "HeaderVideo": "Video",
     "HeaderPaths": "Paths",
     "CategorySync": "Sync",
+    "TabPlaylist": "Playlist",
     "HeaderEasyPinCode": "Easy Pin Code",
     "HeaderGrownupsOnly": "Grown-ups Only!",
     "DividerOr": "-- or --",
